# Younger

./: .gitmodules  README.ZH.md  README.md  builder.example.sh  builder.sh  constants.sh  convert_hf_onnx.sh  count_succ.sh  detect_graph.sh  enrich.example.sh  get_hf_models.sh  get_hf_models_info.sh  get_large_hf_models.sh  metrics.example.sh  process_instance.sh  pyproject.toml  setup.py
dataset/: creator.py
pengbench/: 20K-Neat.json  SMALL-Neat.json  count_succ.py  detect_graph.py  example.json  form.py  get_hf_metrics.py  get_hf_metrics_metrics_name.py  get_hf_metrics_without_metric_name.py  get_onnx_operators.py  metrics_list.json  onnx_operators.json  process_instance.py  template.json  test.py  test_hf_metrics.py
reproduction/: README.md
test/: test_annotations.py
youngbench/: constants.py  logging.py
youngbench/benchmark/analyzer/: __init__.py  block.py  edge.py  network.py  operator.py  subgraph.py
youngbench/benchmark/generator/: prototype.py
youngbench/benchmark/scripts/: get_bk_stats.py  get_eg_stats.py  get_op_stats.py  simple.py
youngbench/dataset/: __init__.py  logging.py  utils.py
youngbench/dataset/construct/: README.md  builder.py  enrich_dataset_using_hf.py  fetch_raw_metrics.py  fill_metrics_using_hf_readme.py  get_hf_metrics.py  get_hf_models.py  get_large_hf_models.py
youngbench/dataset/modules/: __init__.py  dataset.py  instance.py  meta.py  model.py  network.py  node.py  prototype.py  stamp.py
youngbench/dataset/scripts/: README.md  __init__.py  builder.py  conver_onnx_nx.py  convert_hf_onnx.py  get_hf_models.py  get_hf_models_info.py  loader.py
youngbench/dataset/utils/: __init__.py  cache.py  extraction.py  io.py  management.py  translation.py
younger/: __init__.py  version
younger/applications/: __init__.py  deep_learning.py
younger/applications/datasets/: __init__.py  architecture_dataset.py  block_dataset-old.py  block_dataset.py  ego_dataset.py  link_dataset.py  node_dataset-new.py  node_dataset.py  ssl_dataset.py
younger/applications/models/: __init__.py  gcn_lp.py  glass.py  napp_gat_base.py  napp_gat_vary_v1.py
younger/applications/performance_prediction/: __init__.py  deploy.py  run.py  test.py
younger/applications/tasks/: __init__.py  base_task.py  block_embedding.py  graph_embedding.py  graph_embedding_with_name.sh  link_prediction.py  node_embedding.py  node_prediction.py  performance_prediction.py  ssl_prediction.py  subgraph_embedding.py  subgraph_embedding.sh
younger/applications/utils/: neural_network.py
younger/benchmarks/: README.md  __init__.py  analyze.py  generate.py  merge.py  prepare.py  produce.py  utils.py
younger/benchmarks/analyzer/: __init__.py  edge.py  operator.py  subgraph.py
younger/benchmarks/generator/: __init__.py
younger/benchmarks/scripts/: generate_dag.py  get_eg_stats.py  get_op_stats.py
younger/benchmarks/visualize/: visual_prototype.py
younger/commands/: __init__.py  applications.py  apps.py  benchmarks.py  datasets.py  logics.py  main.py  tools.py
younger/commons/: __init__.py  constants.py  download.py  hash.py  io.py  logging.py  version.py
younger/configuration_and_logs/link_prediction/: gat_lp_node.toml  gat_lp_operator.toml  gcn_lp_node.toml  gcn_lp_operator.toml  get_checkpoint_info_line.py  get_checkpoint_info_line.sh  sage_lp_node.toml  sage_lp_operator.toml  test_all_gnn.sh  test_gat_lp_node.sh  test_gat_lp_operator.sh  test_gcn_lp_node.sh  test_gcn_lp_operator.sh  (+9 more)
younger/dataset_pipeline_scripts/: README.md  filter.sh  silly-community-split-full.sh  silly-community-split.sh  silly-split-bound.sh  silly-split-full.sh  silly-split.sh  split.sh  split_accuracy.sh  split_block.sh  statistics.sh
younger/process/: filter.sh  get_tasks.sh  huggingface_tasks.json  silly-split-full-for-embedding.sh  silly_split_for_lp_node.sh
younger/visualization/: draw_bar.py  draw_bar_and_villion.py  draw_graph_embedding.py  draw_graph_embedding.sh  draw_node_embedding.py  draw_node_embedding.sh  draw_subgraph_embedding.py  draw_subgraph_embedding.sh  draw_vilion.py
(+161 files in other folders)
